--- a/src/main/resources/templates/ask.html
+++ b/src/main/resources/templates/ask.html
@@ -22,18 +22,16 @@
 <!-- #users 리스트 -->
 
 <body>
-      <nav>
-            <h3>구입 금액 입력</h3>
-      </nav>
+    <nav><h1>수동 로또 개수 입력</h1></nav>
 
-      <form action="/money" method="post">
-            <div class="money">
-                  <label>구입 금액 : </label>
-                  <input type="text" name="money" />
-                  <input type="submit" value="충전" />
-            </div>
-      </form>
-
+    <form action="/choose" method="post">
+    <div>
+        <span>수동 개수 입력 : </span>
+        <input type="text" name="manualCount" maxlength=3>
+    </div>
+</form>
+    <script>
+    </script>
       <!-- Optional JavaScript -->
       <!-- jQuery first, then Popper.js, then Bootstrap JS -->
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
