--- a/src/main/resources/templates/lottolist.html
+++ b/src/main/resources/templates/lottolist.html
@@ -18,22 +18,40 @@
       div.lottobuy input {
             max-width: 100px;
       }
+      #bonus {
+            max-width: 20px;
+      }
 </style>
 <!-- #users 리스트 -->
 
 <body>
       <nav>
-            <h3>구입 금액 입력</h3>
+            <h3>결과 출력 및 winning 체크</h3>
       </nav>
 
-      <form action="/money" method="post">
-            <div class="money">
-                  <label>구입 금액 : </label>
-                  <input type="text" name="money" />
-                  <input type="submit" value="충전" />
-            </div>
+      <div class="printCount">
+            <label id="count"> 수동으로 {{manualCount}} 번, 자동으로 {{autoCount}} 번 구매했습니다. </label>
+            <div><i>로또 목록</i></div>
+            {{#lottoList}}
+            {{numbers}}
+            <br>
+            {{/lottoList}}
+      </div>
+
+      <form action="/winning" method="post">
+            <br>
+            <span>당첨 번호 </span> 
+            <br>
+            <input type="text" name="winninglotto" placeholder="1,2,3,4,5,6" />
+            -
+            <input id="bonus" type="bonusnum" name="bonusnumber" placeholder="1" maxlength = 2/>
+            <input type="submit" value="구입" />
       </form>
 
+
+
+
+      <script src="./js/form2.js"></script>
       <!-- Optional JavaScript -->
       <!-- jQuery first, then Popper.js, then Bootstrap JS -->
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
