--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -18,22 +18,11 @@
         </style>
 </head>
 <body>
-<div class="container" style="text-align: center">
-    <form class="text-dark mt-5" method="post" action="/lotto">
-        <div class="form-group">
-            <label for="money">구입 금액</label>
-            <input type="number" class="form-control" id="money" name="money" placeholder="최소 구입 금액은 1000원입니다.">
-        </div>
-        <div class="form-group">
-            <label for="manualLottoCount">수동으로 구매할 로또 개수</label>
-            <input type="number" class="form-control" id="manualLottoCount" name="manualLottoCount" placeholder="수동으로 구매할 로또의 개수를 입력해 주세요.">
-        </div>
-        <div class="form-group">
-            <label for="manualLottoNumber">수동 로또 번호</label>
-            <textarea class="form-control" id="manualLottoNumber" name="manualLottoNumber" rows="3"></textarea>
-        </div>
-        <button type="submit" class="btn btn-success">구매</button>
-    </form>
+<div class="container jumbotron" style="text-align: center">
+    <h3 class="display-4">{{purchaseMessage}}</h3>
+    {{#lottos}}
+    <p class="lead">{{this}}</p>
+    {{/lottos}}
 </div>
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
