feat: Web UI를 통한 로또 결과 확인 기능 구현

--- a/src/main/resources/templates/purchase.html
+++ b/src/main/resources/templates/purchase.html
@@ -32,6 +32,14 @@
             <label for="manualLottoNumber">수동 로또 번호</label>
             <textarea class="form-control" id="manualLottoNumber" name="manualLottoNumber" rows="3"></textarea>
         </div>
+        <div class="form-group">
+            <label for="winningNumber">당첨 번호</label>
+            <input type="text" class="form-control" id="winningNumber" name="winningNumber" placeholder="당첨 번호를 입력해주세요.">
+        </div>
+        <div class="form-group">
+            <label for="bonusBall">보너스 볼</label>
+            <input type="number" class="form-control" id="bonusBall" name="bonusBall" placeholder="보너스 볼">
+        </div>
         <button type="submit" class="btn btn-success">구매</button>
     </form>
 </div>
