--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -19,11 +19,18 @@
 </head>
 <body>
 <div class="container jumbotron" style="text-align: center">
+    <h3 class="display-4">당첨 통계</h3>
+    {{#result}}
+    <p class="lead">{{this}}</p>
+    {{/result}}
+    {{yieldMessage}}
+    <hr class="my-4">
     <h3 class="display-4">{{purchaseMessage}}</h3>
     {{#lottos}}
     <p class="lead">{{this}}</p>
     {{/lottos}}
 </div>
+
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
