feat: 홈으로 돌아오는 기능 구현

--- a/src/main/resources/templates/purchase.html
+++ b/src/main/resources/templates/purchase.html
@@ -18,6 +18,7 @@
         </style>
 </head>
 <body>
+<button type="button" class="btn btn-primary m-3" onclick="window.location.href='/'">홈으로</button>
 <div class="container" style="text-align: center">
     <form class="text-dark mt-5" method="post" action="/lotto">
         <div class="form-group">
