--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -18,6 +18,7 @@
         </style>
 </head>
 <body>
+<button type="button" class="btn btn-primary m-3" onclick="window.location.href='/'">홈으로</button>
 <div class="container jumbotron" style="text-align: center">
     <h3 class="display-4">당첨 통계</h3>
     {{#result}}
