--- a/src/main/resources/templates/inputStep2.html
+++ b/src/main/resources/templates/inputStep2.html
@@ -12,20 +12,20 @@
     <title>로또</title>
 </head>
 <body>
-<form action="inputStep1.html" method="post">
-    <div class="form-group">
-        <label for="inputPayment">{{paymentMessage}}</label>
-        <input type="text" class="form-control" id="inputPayment" aria-describedby="emailHelp" placeholder="구입 금액"
-               name="payment">
-        <small id="paymentHelp" class="form-text text-muted">로또 하나당 가격은 {{lottoPrice}}원 입니다</small>
-    </div>
-    <div class="form-group">
-        <label for="inputCountOfManualLotto">{{countOfManualLottoMessage}}</label>
-        <input type="text" class="form-control" id="inputCountOfManualLotto" placeholder="개수" name="countOfManualLotto">
-        <small id="countOfManualLottoHelp" class="form-text text-muted">총 로또개수 이하의 숫자를 입력하세요</small>
-    </div>
 
-    <button type="submit" class="btn btn-primary">다음</button>
+<form>
+    <div class="form-group">
+        <label for="inputWinningLottoNumber">{{winningLottoNumberMessage}}</label>
+        <input type="text" class="form-control" id="inputWinningLottoNumber" aria-describedby="emailHelp"
+               placeholder="ex) 1, 2, 3, 4, 5, 6">
+    </div>
+    <div class="form-group">
+        <label for="inputBonusNumber">{{winningLottoNumberMessage}}</label>
+        <input type="text" class="form-control" id="inputBonusNumber" aria-describedby="emailHelp"
+               placeholder="ex) 7">
+        <small id="bonusNumberHelp" class="form-text text-muted">당첨번호와 다른 수를 입력하세요</small>
+    </div>
+    <button type="submit" class="btn btn-primary">결과 확인</button>
 </form>
 
 
