--- a/src/main/resources/templates/view/lotto_contact.html
+++ b/src/main/resources/templates/view/lotto_contact.html
@@ -11,7 +11,8 @@
 
     <!-- Bootstrap core CSS -->
     <link href="../css/bootstrap.min.css" type="text/css" rel="stylesheet">
-
+    <!-- Bootstrap javascript-->
+    <script src="../js/bootstrap.min.js"></script>
 
     <style>
         .bd-placeholder-img {
@@ -31,17 +32,18 @@
     </style>
     <!-- Custom styles for this template -->
     <link href="../css/cover.css" type="text/css" rel="stylesheet">
+    <script src="../js/cover.js"></script>
+    
 </head>
 
 <body class="text-center">
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
         <header class="masthead mb-auto">
             <div class="inner">
-                <h3 class="masthead-brand">로또 시물레이션</h3>
+                <h3 class="masthead-brand"><a class="masthead-brand" href="/">로또 시뮬레이션</a></h3>
                 <nav class="nav nav-masthead justify-content-center">
-                    <a class="nav-link" href="/">다시 시작</a>
-                    <a class="nav-link active" href="lotto_rule">로또 룰</a>
-                    <a class="nav-link" href="lotto_contact">연락처</a>
+                    <a class="nav-link" href="lotto_rule">로또 룰</a>
+                    <a class="nav-link active" href="lotto_contact">연락처</a>
                 </nav>
             </div>
         </header>
