--- a/src/main/resources/templates/view/lotto_rule.html
+++ b/src/main/resources/templates/view/lotto_rule.html
@@ -11,7 +11,8 @@
 
     <!-- Bootstrap core CSS -->
     <link href="../css/bootstrap.min.css" type="text/css" rel="stylesheet">
-
+    <!-- Bootstrap javascript-->
+    <script src="../js/bootstrap.min.js"></script>
 
     <style>
         .bd-placeholder-img {
@@ -31,15 +32,16 @@
     </style>
     <!-- Custom styles for this template -->
     <link href="../css/cover.css" type="text/css" rel="stylesheet">
+    <script src="../js/cover.js"></script>
+    
 </head>
 
 <body class="text-center">
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
         <header class="masthead mb-auto">
             <div class="inner">
-                <h3 class="masthead-brand">로또 시물레이션</h3>
+                <h3 class="masthead-brand"><a class="masthead-brand" href="/">로또 시뮬레이션</a></h3>
                 <nav class="nav nav-masthead justify-content-center">
-                    <a class="nav-link" href="/">다시 시작</a>
                     <a class="nav-link active" href="lotto_rule">로또 룰</a>
                     <a class="nav-link" href="lotto_contact">연락처</a>
                 </nav>
@@ -48,8 +50,9 @@
 
         <main role="main" class="inner cover">
             <h1 class="cover-heading">로또 시뮬레이션이란?</h1>
-            <p class="lead">로또 시뮬레이션이란 로또 금액을 입력한뒤 수동구매와 자동구매를 통해 로또 번호를 출력합니다. <br />
-                그리고 당첨번호를 적으면 구매한 로또 번호와 비교해 수익률을 나타내주는 시뮬레이션입니다.
+            <p class="lead">로또 시뮬레이션이란 로또 금액을 입력한뒤 <br/> 
+                수동구매와 자동구매를 통해 로또 번호를 출력합니다. <br/>
+                그리고 당첨번호를 적으면 구매한 로또 번호와 비교해 <br/> 수익률을 나타내주는 시뮬레이션입니다.
             </p>
             <p class="lead">
                 <a href="/" class="btn btn-lg btn-secondary">게임 시작</a>
