--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,133 +1,1 @@
-<!DOCTYPE html>
-<html lang="kr">
-    <head>
-        <meta charset="UTF-8">
-        <title>로또</title>
-        <link rel="stylesheet"
-            href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-            integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-            crossorigin="anonymous">
-        <link rel="stylesheet" href="/css/style.css">
-    </head>
-    <body>
-        <div class="wrap">
-            <h1>로또 구입</h1>
-            <fieldset>
-                <form action="/buy" method="POST">
-                    <div class="form-group">
-                        <label for="input-money">구입 금액</label>
-                        <div class="money-input-group">
-                            <input type="number" name="money" class="form-control money-input"
-                                id="input-money" placeholder="1000">원
-                        </div>
-                        <small id="money-help" class="form-text text-muted">구입 금액은
-                            {{minBuyingMoney}}원 이상이어야 합니다.</small>
-                    </div>
-
-                    <div class="form-group winning-number-group">
-                        <label for="input-winning-0">당첨 번호</label>
-                        <div class="winning-input-group">
-                            <input type="number" name="winning_0" id="input-winning-0"
-                                class="form-control lotto-number-input winning-number">
-                            <input type="number" name="winning_1" id="input-winning-1"
-                                class="form-control lotto-number-input winning-number">
-                            <input type="number" name="winning_2" id="input-winning-2"
-                                class="form-control lotto-number-input winning-number">
-                            <input type="number" name="winning_3" id="input-winning-3"
-                                class="form-control lotto-number-input winning-number">
-                            <input type="number" name="winning_4" id="input-winning-4"
-                                class="form-control lotto-number-input winning-number">
-                            <input type="number" name="winning_5" id="input-winning-5"
-                                class="form-control lotto-number-input winning-number">
-                            <label for="input-winni lotto-number-inputng-bonus">보너스 볼</label>
-                            <input type="number" name="winning_bonus" id="input-winning-bonus"
-                                class="form-control lotto-number-input winning-bonus-number">
-                        </div>
-                        <div class="alert alert-danger d-none">올바르지 않은 입력값이 있습니다.</div>
-                    </div>
-
-                    <div class="form-group">
-                        <div class="qty-input-group">
-                            <label for="input-manual-qty">수동 구입</label>
-                            <input type="number" name="qty_manual" class="form-control qty-input"
-                                id="input-manual-qty" placeholder="0" readonly>장
-                        </div>
-                        <div class="manual-numbers"></div>
-
-                        <button type="button" class="btn btn-outline-success btn-add-manual-number">수동 번호 추가</button>
-                    </div>
-
-                    <div class="result-table-wrapper d-none">
-                        <table class="table">
-                            <thead>
-                                <th>등수</th>
-                                <th>당첨된 로또 개수</th>
-                            </thead>
-                            <tbody>
-                                <tr class="result-row-first">
-                                    <th>1등</th>
-                                    <td>0</td>
-                                </tr>
-                                <tr class="result-row-second">
-                                    <th>2등</th>
-                                    <td>0</td>
-                                </tr>
-                                <tr class="result-row-third">
-                                    <th>3등</th>
-                                    <td>0</td>
-                                </tr>
-                                <tr class="result-row-fourth">
-                                    <th>4등</th>
-                                    <td>0</td>
-                                </tr>
-                                <tr class="result-row-fifth">
-                                    <th>5등</th>
-                                    <td>0</td>
-                                </tr>
-                                <tr class="result-row-none">
-                                    <th>꽝</th>
-                                    <td>0</td>
-                                </tr>
-                            </tbody>
-                            <tfoot>
-                                <tr class="result-row-earning-rate">
-                                    <th>수익률</th>
-                                    <td>0</td>
-                                </tr>
-                            </tfoot>
-                        </table>
-                    </div>
-                    <button type="button" class="btn btn-primary btn-buy">구입</button>
-                    <button type="reset" class="btn btn-info btn-reset">다시하기</button>
-                </form>
-            </fieldset>
-        </div>
-
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-            crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-            crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-            crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/handlebars@4.1.2/dist/handlebars.min.js"></script>
-        <script id="lottonumber-input-group" type="text/x-handlebars-template">
-                <input type="number" name="winning_0" id="input-winning-0"
-                    class="form-control lotto-number-input">
-                <input type="number" name="winning_1" id="input-winning-1"
-                    class="form-control lotto-number-input">
-                <input type="number" name="winning_2" id="input-winning-2"
-                    class="form-control lotto-number-input">
-                <input type="number" name="winning_3" id="input-winning-3"
-                    class="form-control lotto-number-input">
-                <input type="number" name="winning_4" id="input-winning-4"
-                    class="form-control lotto-number-input">
-                <input type="number" name="winning_5" id="input-winning-5"
-                    class="form-control lotto-number-input">
-                <button type="button" class="btn btn-danger"><img src="/images/baseline_delete_outline_white_18dp.png" alt="수동 번호 제거"></button>
-        </script>
-        <script src="/js/index.js"></script>
-    </body>
-</html>
+<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><link rel=icon href=/favicon.ico><title>java-lotto-1-view</title><link href=/css/app.454b0c81.css rel=preload as=style><link href=/css/chunk-vendors.0cbd351a.css rel=preload as=style><link href=/js/app.36ff4b3b.js rel=preload as=script><link href=/js/chunk-vendors.97fecd46.js rel=preload as=script><link href=/css/chunk-vendors.0cbd351a.css rel=stylesheet><link href=/css/app.454b0c81.css rel=stylesheet></head><body><noscript><strong>We're sorry but java-lotto-1-view doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script src=/js/chunk-vendors.97fecd46.js></script><script src=/js/app.36ff4b3b.js></script></body></html>
