--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -33,6 +33,10 @@
         {{/stat}}
         <label>수익률은 {{profit}}% 입니다.</label>
     </div>
+
+    <form action="/end" method="POST">
+          <input type="submit" value="끝" />
+    </form>
       <!-- Optional JavaScript -->
       <!-- jQuery first, then Popper.js, then Bootstrap JS -->
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
