--- a/src/main/resources/templates/showLottos.html
+++ b/src/main/resources/templates/showLottos.html
@@ -2,18 +2,43 @@
 <head>
     <meta charset="UTF-8" />
     <title>Document</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+            crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+            crossorigin="anonymous"></script>
 </head>
 <body>
 <form action="/showResult" method="post" accept-charset="UTF-8">
-    {{#lottos.lottoTickets}}
-        {{lottoNumbers}}<br>
-    {{/lottos.lottoTickets}}
+    <ul class="list-group">
+        {{#lottoTickets.lottoTickets}}
+        <li class="list-group-item">{{lottoNumbers}}</li>
+        {{/lottoTickets.lottoTickets}}
+    </ul>
+
     <br>
-    지난 주 당첨 번호를 입력해 주세요
-    <input type="text" name="winningLotto" placeholder="당첨 번호" value="1,2,3,4,5,6"><br>
-    보너스 볼을 입력해 주세요.
-    <input type="text" name="bonusBall" placeholder="보너스 볼" value="7"><br>
-    <input type="submit">
+    <div class="input-group mb-3">
+        <div class="input-group-prepend">
+            <span class="input-group-text" id="basic-addon1">지난 주 당첨 번호 입력</span>
+        </div>
+        <input type="text" name="winningLotto" class="form-control" placeholder="당첨 번호" aria-label="Username"
+               aria-describedby="basic-addon1">
+    </div>
+
+    <div class="input-group mb-3">
+        <div class="input-group-prepend">
+            <span class="input-group-text" id="basic-addon2">보너스 볼 입력</span>
+        </div>
+        <input type="text" name="bonusBall" class="form-control" placeholder="보너스 볼" aria-label="Username"
+               aria-describedby="basic-addon1">
+    </div>
+    <button type="submit" class="btn btn-primary">다음 단계</button>
 </form>
 </body>
 </html>
