--- a/src/main/resources/templates/showResult.html
+++ b/src/main/resources/templates/showResult.html
@@ -2,17 +2,28 @@
 <head>
     <meta charset="UTF-8" />
     <title>Document</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+            crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+            crossorigin="anonymous"></script>
 </head>
 <body>
 <form action="/reset" method="get" accept-charset="UTF-8">
-    <h1>당첨 통계</h1>
-    <h2>----------</h2>
+    <button class="btn btn-dark">당첨통계</button>
+    <ul class="list-group">
     {{#each lottoResults.lottoRewards as |value key|}}
         {{#key.countOfMatch}}
-            {{key.countOfMatch}}개 일치  ({{key.rewardMoney}})원 - {{value}}개
+        <li class="list-group-item">{{key.countOfMatch}}개 일치 ({{key.rewardMoney}})원 - {{value}}개</li>
         {{/key.countOfMatch}}
-    <br>
     {{/each}}
+    </ul>
     총 수익률은 : {{rewardMoney}}입니다.
     <input type="submit" value="되돌아가기">
 </form>
