--- a/src/main/resources/templates/winningbonus.html
+++ b/src/main/resources/templates/winningbonus.html
@@ -19,8 +19,8 @@
 <br>
 <br>
 <form action="/result">
-  <label for="bonus">보너스 번호 :</label>
-  <input id="bonus" type="text" name="bonus"/>
+  <label for="bonusnumber">보너스 번호 :</label>
+  <input id="bonusnumber" type="text" name="bonusnumber"/>
   <input type="submit" value="결과보기" />
 </form>
 </body>
