refactor: 데이터베이스 테이블 설계 수정

--- a/src/main/resources/templates/show.html
+++ b/src/main/resources/templates/show.html
@@ -9,7 +9,7 @@
 <br/>
 
 <form action="/showLottoInfo">
-    <select name="lottoId">
+    <select name="lottoRound">
         {{#rounds}}
         <option value={{this}} selected="selected">{{this}}</option>
         {{/rounds}}
