--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,69 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>로또</title>
+	<!-- Required meta tags -->
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	
+	<!-- Bootstrap CSS -->
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+	      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	
+	<title>Lotto</title>
 </head>
 <body>
-Hello World!!
+<div style="padding-left: 10%; padding-right: 10%">
+	<div class="input-group mb-3">
+		<div class="input-group-prepend">
+			<span class="input-group-text" id="basic-addon1">구매 금액을 입력해 주세요.</span>
+		</div>
+		<input type="number" id="lotto-money-input-text" class="form-control" min="0" placeholder="로또 구매 금액"
+		       aria-label="Username" aria-describedby="basic-addon1">
+		<button type="button" class="btn btn-outline-success" onclick="getNumOfLotto()">로또 구매</button>
+	</div>
+	<div id="num-of-lotto" class="badge" style="width: 30%;"></div>
+</div>
+
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
+
+<script src="//code.jquery.com/jquery-3.3.1.min.js"></script>
+<script type="text/javascript">
+    function appendNewNodeAt(parent, node) {
+        while (parent.firstChild) {
+            parent.removeChild(parent.firstChild);
+        }
+        parent.appendChild(node);
+    }
+
+    function getNumOfLotto() {
+        return new Promise(function (resolve, reject) {
+            var input = document.getElementById("lotto-money-input-text").value;
+            $.get('/lotto-money?input=' + input, function (response) {
+                if (response) {
+                    resolve(response);
+                }
+                reject(new Error("Request is failed"));
+            });
+        }).then(function (value) {
+            var textNode = document.createTextNode(value);
+            var parent = document.getElementById("num-of-lotto");
+            appendNewNodeAt(parent, textNode);
+        }).catch(function (err) {
+            console.log(err);
+        });
+    }
+
+</script>
+
 </body>
 </html>
